# WatermarkScope

./: .gitattributes  .gitignore  CLAIM_BOUNDARIES.md  EXTERNAL_LARGE_ARTIFACTS.json  FYP_submission_form_fields.txt  LARGE_ARTIFACT_NOTE.md  PRESERVATION_SUMMARY.json  PRESERVED_RESULT_MANIFEST.jsonl  README.md  RESULT_MANIFEST.jsonl  index.html  site.js  styles.css
projects/CodeMarkBench/: .env.example  .gitattributes  .gitignore  ARTIFACTS.md  CITATION.cff  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  constraints-release-cu124.txt  pyproject.toml  requirements-remote.txt  requirements.txt
projects/CodeMarkBench/artifacts/: README.md  SHA256SUMS.template.txt  raw_results_manifest.template.json
projects/CodeMarkBench/codemarkbench/: __init__.py  __main__.py  benchmarks.py  collections.py  config.py  crafted_benchmarks.py  crafted_templates.py  hf_auth.py  language_support.py  leaderboards.py  logger.py  models.py  providers.py  public_benchmarks.py  report.py  scorecard.py  suite.py  toolchains.py  utils.py  validation.py
projects/CodeMarkBench/configs/: crafted_original_only.yaml  crafted_stress_only.yaml  crafted_translation_only.yaml  debug.yaml  default.yaml  humanevalx_only.yaml  mbxp_only.yaml  public_humaneval_plus_ewd_runtime.yaml  public_humaneval_plus_kgw_runtime.yaml  public_humaneval_plus_stone_runtime.yaml  public_humaneval_plus_sweet_runtime.yaml  public_mbpp_plus_ewd_runtime.yaml  public_mbpp_plus_kgw_runtime.yaml  public_mbpp_plus_stone_runtime.yaml  public_mbpp_plus_sweet_runtime.yaml
projects/CodeMarkBench/docs/: artifacts.md  citation.md  (+16 more)
(+542 files in other folders)
