[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codemarkbench"
version = "0.1.0"
description = "Executable benchmark suite and multidimensional evaluation framework for code watermarking"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["benchmark", "code watermarking", "robustness", "evaluation", "code generation"]
dependencies = [
  "PyYAML>=6.0",
  "click>=8.1",
  "rich>=13.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "safetensors>=0.4",
]
remote = [
  "transformers>=4.46,<5",
  "safetensors>=0.4",
  "sentencepiece>=0.2",
  "Pillow>=10",
  "scipy>=1.12",
  "nltk>=3.9",
]

[project.urls]
Homepage = "https://github.com/Haoyi-Zhang/CodeMarkBench"
Repository = "https://github.com/Haoyi-Zhang/CodeMarkBench"
Documentation = "https://github.com/Haoyi-Zhang/CodeMarkBench/tree/main/docs"

[project.scripts]
codemarkbench = "codemarkbench.__main__:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["codemarkbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:typeguard"
